# Testbeam2026_WC

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.txt  Testbeam2026_WC_MC.code-workspace  gun_electrons_testbeam.mac  gun_gammas_background.mac  gun_muons_lngs.mac  gun_muons_testbeam.mac  init_vis.mac  mount_nmv_data.sh  rclone.conf  run_single.mac  run_triple.mac  sim.cc  test_photon_fiber_LtoR.mac  test_photon_fiber_LtoR_gui.mac  test_photon_fiber_RtoL_gui.mac  vis.mac
Analysis_script/: Signal_maker.ipynb  WC_analisys_tool.ipynb  wclib.py
Analysis_script_background/: Angle_final_results_summary.ipynb  Angle_study.ipynb  Background_final.ipynb  Multivariant_analysis.ipynb  Signal_maker.ipynb  Theta_estimator.ipynb  build_overview_pptx.py  build_rate_estimate_pptx.py  compare_gamma_spectra.ipynb  compare_gamma_spectra.py  histo_environmental_gamma_CUPID_python_extract_true_spectrum.txt  muon_multiplicity.py  plot_photons_at_pmt.py  view_geometry_3D.ipynb
Analysis_script_single/: Angle_final_results_summary.ipynb  Multivariant_analysis.ipynb  Signal_maker.ipynb  Theta_estimator.ipynb
Analysis_script_triple/: Signal_maker.ipynb
cad/: cluster_map.json  extract_geometry.py  extract_named.py  holes.json  tanks.csv  tanks_new.csv  water_modules.csv  water_sectors.csv  water_sectors_real.csv
include/: ActionInitialization.hh  EventAction.hh  PMTSD.hh  PrimaryGeneratorAction.hh  SingleModuleDetector.hh  SingleModuleDetectorWBC.hh  SingleModuleDetectorWBC2.hh  SingleModuleDetectorWBC3.hh  SteppingAction.hh  TripleModuleDetector.hh
plot_style/: README.md  (+4 more)
(+716 files in other folders)
